--- a/RSSReader/app/src/main/AndroidManifest.xml
+++ b/RSSReader/app/src/main/AndroidManifest.xml
@@ -24,16 +24,8 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name"
+            android:label="@string/title_activity_main"
             android:screenOrientation="portrait" >
-
-            <!--
-            intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter
-            -->
         </activity>
         <activity
             android:name=".NewsActivity"
@@ -52,11 +44,23 @@
         </activity>
         <activity
             android:name=".SearchActivity"
-            android:label="@string/title_activity_search" >
+            android:label="@string/title_activity_search"
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name=".ResultsActivity"
-            android:label="@string/title_activity_results" >
+            android:label="@string/title_activity_results"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name=".StorageActivity"
+            android:label="RSS Reader"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name=".StoredNewsActivity"
+            android:label="RSS Reader"
+            android:screenOrientation="portrait" >
         </activity>
     </application>
 
