--- a/RSSReader/app/src/main/AndroidManifest.xml
+++ b/RSSReader/app/src/main/AndroidManifest.xml
@@ -5,22 +5,23 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="16"
+        android:minSdkVersion="15"
         android:targetSdkVersion="22" />
 
     <uses-permission android:name="android.permission.INTERNET" />
 
-    <android:uses-permission
+    <!--android:uses-permission
         android:name="android.permission.WRITE_EXTERNAL_STORAGE"
         android:maxSdkVersion="18" />
     <android:uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <android:uses-permission
         android:name="android.permission.READ_EXTERNAL_STORAGE"
-        android:maxSdkVersion="18" />
+        android:maxSdkVersion="18" /-->
 
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
+        android:icon="@drawable/socar_icon"
         android:theme="@style/AppTheme" >
         <activity
             android:name=".MainActivity"
